# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2025, The Spine Docs organization and its contributors.

[project]
name = "spine-cicd-actions"
version = "1.0.0"
description = "Reusable CI/CD actions and pre-commit hooks for Spine Docs"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
spine-check-headers = "spine_cicd_actions.check_headers:main"
spine-check-dco = "spine_cicd_actions.check_dco:main"

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"
